Finish implementing Permissions, Add in Color support for Our Anvils
Reorganize Structure for correct Compiling

--- a/anvilstringcommand/src/main/resources/plugin.yml
+++ b/anvilstringcommand/src/main/resources/plugin.yml
@@ -2,6 +2,7 @@ name: AnvilStringCommand
 version: 0.1
 main: me.drkmatr1984.anvilstringcommand.AnvilStringCommand
 description: Opens an AnvilGUI to get String input
+softdepend: [PlaceholderAPI, AnvilPatch]
 commands:
   anvil:
     description: Opens an AnvilGUI to get String input
