Start Work on Plugin Commands, Trying to get the GUI to Behave *whip*

--- a/anvilstringcommand/src/main/resources/plugin.yml
+++ b/anvilstringcommand/src/main/resources/plugin.yml
@@ -5,7 +5,7 @@ description: Opens an AnvilGUI to get String input
 softdepend: [PlaceholderAPI, AnvilPatch]
 commands:
   anvil:
-    description: Opens an AnvilGUI to get String input
+    description: Displays the help for the plugin
     aliases: [anvil]
     usage: |
-        /anvil - Opens an AnvilGUI to get String input
+        /anvil - Displays the help for the plugin
