Combine the 2 GUI files into 1, add alias to commands, Update config.yml and plugin.yml
Fixed a few other bugs

--- a/anvilstringcommand/src/main/resources/plugin.yml
+++ b/anvilstringcommand/src/main/resources/plugin.yml
@@ -2,10 +2,4 @@ name: AnvilStringCommand
 version: 0.1
 main: me.drkmatr1984.anvilstringcommand.AnvilStringCommand
 description: Opens an AnvilGUI to get String input
-softdepend: [PlaceholderAPI, AnvilPatch]
-commands:
-  anvil:
-    description: Displays the help for the plugin
-    aliases: [anvil]
-    usage: |
-        /anvil - Displays the help for the plugin
+softdepend: [AnvilPatch, PlaceholderAPI]
