--- a/anvilstringcommand/src/main/resources/plugin.yml
+++ b/anvilstringcommand/src/main/resources/plugin.yml
@@ -1,5 +1,5 @@
-name: AnvilStringCommand
-version: 0.1
+name: AnvilCommands
+version: 0.14
 main: me.drkmatr1984.anvilstringcommand.AnvilStringCommand
 description: Opens an AnvilGUI to get String input
 softdepend: [AnvilPatch, PlaceholderAPI]
