--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,8 @@
       <!-- <module>v18r1</module> -->
       <module>common</module>
       <module>anvilstringcommand</module>
+      <module>v111r1</module>
+      <module>v110r1</module>
       <module>v19r2</module>
       <module>v19r1</module>      
       <module>v18r3</module>
